Stopped line wrapping in the file tree

--- a/website/public/css/style.css
+++ b/website/public/css/style.css
@@ -87,6 +87,7 @@ h1, h2, h3, h4, h5, h6 {
 	width: 100%;
 	height: 100%;
 	padding: 10px;
+	padding-left: 15px;
 	overflow: auto;
 }
 
@@ -97,6 +98,10 @@ h1, h2, h3, h4, h5, h6 {
 
 #editor #filestructure > ul {
 	padding-left: 0;
+}
+
+#editor #filestructure li {
+	white-space: nowrap;
 }
 
 #editor #filestructure span {
